# k-truss-discovery-for-dense-graphs

./: CMakeLists.txt  LICENSE  README.md  ktruss.cu  runscript.txt
